[gd_scene load_steps=14 format=3 uid="uid://c3gjipwwnb75k"]

[ext_resource type="Script" uid="uid://byy48hmyrbuht" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="PackedScene" uid="uid://jdk4yvvgvt7o" path="res://scenes/Tear.tscn" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://d1umtbguqhp2s" path="res://assets/sprites/temp_player.png" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://1x862v810jmk" path="res://assets/sprites/horiz_dodge_sheet.png" id="4_mdl7e"]

[sub_resource type="GDScript" id="GDScript_g2els"]
script/source = "extends Node2D
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u8vuu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("4_mdl7e")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("4_mdl7e")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("4_mdl7e")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("4_mdl7e")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("4_mdl7e")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyey"]
atlas = ExtResource("4_mdl7e")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_d3wef"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"animate",
"speed": 30.0
}]

[node name="Player" type="Node2D"]
script = SubResource("GDScript_g2els")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_3vyb7")
tear_scene = ExtResource("2_g2els")

[node name="PlayerSprite" type="Sprite2D" parent="CharacterBody2D"]
texture = ExtResource("3_qhqgy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CapsuleShape2D_u8vuu")

[node name="ShootPoint" type="Marker2D" parent="CharacterBody2D"]

[node name="FireCooldown" type="Timer" parent="CharacterBody2D"]

[node name="DodgeSprites" type="Node2D" parent="CharacterBody2D"]

[node name="RightDodge" type="AnimatedSprite2D" parent="CharacterBody2D/DodgeSprites"]
position = Vector2(-64, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_d3wef")
animation = &"animate"

[node name="LeftDodge" type="AnimatedSprite2D" parent="CharacterBody2D/DodgeSprites"]
position = Vector2(64, 0)
scale = Vector2(-2, 2)
sprite_frames = SubResource("SpriteFrames_d3wef")
animation = &"animate"
